samples/_failures_safe/1761552180_0e1dcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7371d48c.c: In function ‘main’:
./samples/SAFE/__tmp_7371d48c.c:132:13: error: expected expression at end of input
  132 |             int val = read_int("Value: ", INT_MIN,
      |             ^~~
./samples/SAFE/__tmp_7371d48c.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7371d48c.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7371d48c.c:132:13: error: expected declaration or statement at end of input
